--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Finde alle Ostereier!</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" href="styles.css"/>
 		<script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
@@ -57,9 +57,9 @@ and open the template in the editor.
 			var SCORE_EGG_WIDTH = 50;
 			var SCORE_EGG_HEIGHT = 42;
 
-			var SUCCESS_MSG_HEADER = "Znalazłeś wszystkie jajka!";
-			var SUCCESS_MSG_PREFIX = "Gratulacje! Znalazłeś wszystkie jajka!<br/>Twój czas to ";
-			var SUCCESS_MSG_SUFIX = " sek<br/><a href='index.html'>Zagraj ponownie</a>";
+			var SUCCESS_MSG_HEADER = "Großartig!";
+			var SUCCESS_MSG_PREFIX = "Du hast alle Ostereier gefunden<br/>Deine Zeit ist ";
+			var SUCCESS_MSG_SUFIX = " Sekunden<br/><a href='index.html'>Nochmals spielen</a>";
 
 
 
